prevents header wrapping

--- a/src/components/AlertsPanel/Alerts.css
+++ b/src/components/AlertsPanel/Alerts.css
@@ -90,6 +90,10 @@
   margin-right: 44px;
 }
 
+.alert-list-headers {
+  white-space: nowrap;
+}
+
 .alert-list-headers span:nth-of-type(1),
 .alert-list-label span:nth-of-type(1) {
   width: 50%;
